
Legend:
+ New
* Changed
! Fixed


1.6.5 - not released yet
========================
+ Add a hotkey to open the subtitles downloader dialog
+ Web server: various performance improvements
+ VobSub subtitles can now also be loaded by selecting or draging and dropping the .sub file
+ Ticket #439, External subtitles: support UTF8 without BOM
+ Ticket #1617, Use MPC-HC's icon when registering the context menu entries
+ Ticket #1680, Add Greek translation
+ Ticket #2425, Improve the remember file/DVD position feature: when a file/DVD that was already
  in the list is reopened, it now goes at the top the list. This way files/DVDs that are often
  used will stay in the list instead of being inexorably pushed out of it.
+ Ticket #2647, Add .3ga to known formats
* Updated FFmpeg (n0.8-15587-gd55911a)
* Updated MediaInfoLib to v0.7.61
* Updated ZenLib to v0.4.28 r411
* Updated Little CMS to v2.4 (git 886e2f5)
* Updated Basque, Czech, French, German, Russian, Simplified Chinese, Slovak
  and Ukrainian translations
! MpaDecFilter: updated CMixer, avoid possible memory leaks
! API: CMD_PAUSE was acting as CMD_PLAY and vice versa
! MPEG Splitter: Fix parsing of some malformed TS files
! VSFilter (auto-loading version) wasn't loading on Windows 7
! Ticket #376, Fix subtitles when switching from animated subs to non-animated subs.
  The subtitles' timings were not correctly respected after switching from an
  animated subtitles track to a non-animated subtitles track.
! Ticket #2537, #2554, Fix "Attempted an unsupported operation" error in the
  Save dialogs on Vista and newer systems
! Ticket #2572, FLACSource: Fix playback for some files
! Ticket #2619, FLVSplitter: PCM audio doesn't play
! Ticket #2673, MPEG Splitter: Fix playback for some TS files
! Ticket #2685, FLACSource: Fix a crash with some corrupted file
! Ticket #2699, Avi Splitter: Fix a potential crash with PCM tracks
! Ticket #2703, Fix a crash that could happen when auto-loading some subtitles