@@ -42,6 +42,18 @@
 typedef unsigned int    uint;
 typedef unsigned long   ulong;
 
+// Patch for MinGW: on Win64 long is 32-bit
+#ifdef _WIN64
+    typedef unsigned long long ulongptr;
+#else
+    typedef ulong ulongptr;
+#endif
+
+
+// Helper macro for aligning pointer up to next 16-byte boundary
+#define SOUNDTOUCH_ALIGN_POINTER_16(x)      ( ( (ulongptr)(x) + 15 ) & ~(ulongptr)15 )
+
+
 #ifdef __GNUC__
     // In GCC, include soundtouch_config.h made by config scritps
     #include "soundtouch_config.h"
