@@ -24,6 +24,7 @@ Legend:
 * Updated MediaInfoLib to v0.7.61
 * Updated ZenLib to v0.4.28 r411
 * Updated Little CMS to v2.4 (git 886e2f5)
+* Updated SoundTouch to v1.7.0 r160
 * Updated Basque, Czech, French, German, Russian, Simplified Chinese, Slovak
   and Ukrainian translations
 ! MpaDecFilter: updated CMixer, avoid possible memory leaks
